haskell-cabal-debian (4.16.1) unstable; urgency=low

  * Support for packaging libraries produced by the GHCJS compiler.
  * Generate debianizations that include libraries for multiple compiler
    flavors (not yet suppored in haskell-devscripts and/or Cabal.)

 -- David Fox <dsf@seereason.com>  Sat, 16 Aug 2014 07:56:50 -0700

haskell-cabal-debian (4.15.2) unstable; urgency=low

  * Lowercase the strings in the extraLibs argument of allBuildDepends
    before wrapping them in BinPkgName.  Those types, which come from the
    debian package, should be opaque and do this whenever a BinPkgName (or
    SrcPkgName) is created, because upper case is never ok in Debian
    source or binary package names.  In the meantime I will make this
    requested change.  Thanks to Sven Bartscher for pointing this out.

 -- David Fox <dsf@seereason.com>  Tue, 12 Aug 2014 07:47:17 -0700

haskell-cabal-debian (4.15.1) unstable; urgency=low

  * Add Data and Typeable instances.

 -- David Fox <dsf@seereason.com>  Thu, 17 Jul 2014 11:22:17 -0700

haskell-cabal-debian (4.15) unstable; urgency=low

  * Don't hardcode the compiler name in makefile targets.

 -- David Fox <dsf@seereason.com>  Sat, 12 Jul 2014 12:15:10 -0700

haskell-cabal-debian (4.14) unstable; urgency=low

  * Move the code to map the cabal package named "Cabal" to the debian
    package named "libghc-cabal-*" from the seereason defaults to the
    debian defaults.

 -- David Fox <dsf@seereason.com>  Mon, 07 Jul 2014 08:35:39 -0700

haskell-cabal-debian (4.13) unstable; urgency=low

  * Add a flag for ghcjs support.

 -- David Fox <dsf@seereason.com>  Thu, 03 Jul 2014 12:05:21 -0700

haskell-cabal-debian (4.12) unstable; urgency=low

  * Remove the Top type and argument - use getWorkingDirectory instead.

 -- David Fox <dsf@seereason.com>  Sun, 29 Jun 2014 08:11:01 -0700

haskell-cabal-debian (4.11) unstable; urgency=low

  * Use MonadIO instead of IO for all signatures.  This is so